recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:4: error: not found: value x
  forward(x);
          ^