recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  
  var double = 3.72;
  forward(x);
}
